<resources>
    <string name="app_name">WSBTracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Google Sign-In\nWSBTracker</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">WSBTracker</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
        from https://console.developers.google.com/ -->
    <string name="server_client_id">520105391907-4stp5renalf4v0i3abna1d1h22270bln.apps.googleusercontent.com</string>
    <string name="internet_connection_unavailable">Connection Unavailable</string>
    <string name="code_for_school">Enter the code for your school</string>
    <string name="logged_in_as">Logged In As : </string>
    <string name="title_activity_bus_route">BusRouteActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="choose_bus_route">Choose any one of the bus route you want to use :</string>
    <string name="route_1">Rocket Zebra</string>
    <string name="route_2">Mountain Millipede</string>
    <string name="route_3">Sidewalk Spider</string>
    <string name="child_name_question">What is your child\'s name \? </string>
    <string name="child_age_question">Age \? </string>
    <string name="days_they_will_walk_question">Days they will walk</string>
    <string name="title_activity_custom_sign_in">CustomSignInActivity</string>
    <string name="enter_email">Email:</string>
    <string name="enter_password">Password:</string>
    <string name="title_activity_gmap_follow">GMapFollowActivity</string>

</resources>
