<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/main_layout"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/blue_grey_800"
                  android:orientation="vertical"
                  android:gravity="center_horizontal"
                 >

        <TextView
            android:id="@+id/logged_in_emai_id_text_view_bus_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/school_code_text_view_bus_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            />
        <TextView
            android:text="@string/choose_bus_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/radio_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
            android:text="@string/route_1"
            android:textColor="@android:color/white"
            android:id="@+id/route_1_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <RadioButton
                android:textColor="@android:color/white"
                android:text="@string/route_2"
                android:id="@+id/route_2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:textColor="@android:color/white"
                android:text="@string/route_3"
                android:id="@+id/route_3_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

    </LinearLayout>
    <Button
        android:id="@+id/submit_bus_route"
        android:text="Submit"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>


