<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/blue_grey_800"
              android:orientation="vertical"
              >

    <TextView
        android:id="@+id/logged_in_email_id_text_view_child_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/school_code_text_view_child_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        />
    <TextView
        android:id="@+id/bus_route_code_text_view_child_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"/>
    <TextView
        android:textColor="@android:color/white"
        android:text="@string/child_name_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:id="@+id/child_name_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:textColor="@android:color/white"
        android:text="@string/child_age_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:textColor="@android:color/white"
        android:inputType="number"
        android:id="@+id/child_age_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:textColor="@android:color/white"
        android:text="@string/days_they_will_walk_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@android:color/white"
                android:text="Day"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@android:color/white"
                android:text="Am / Pm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@android:color/white"
                android:text="Yes"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/white"
                android:text="Maybe"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/white"
                android:text="No"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@android:color/white"
                android:text="Mon"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@android:color/white"
                android:text="Am"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_weight="3"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@android:color/white"
                android:text="Mon"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@android:color/white"
                android:text="Pm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_weight="3"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@android:color/white"
                android:text="Tue"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@android:color/white"
                android:text="Am"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_weight="3"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@android:color/white"
                android:text="Tue"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@android:color/white"
                android:text="Pm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_weight="3"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@android:color/white"
                android:text="Wed"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@android:color/white"
                android:text="Am"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_weight="3"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


